
  [ Updated translations ]
  * Hebrew (he.po) by Omer Zak and Lior Kaplan (closes: #593855).
  * Romanian (ro.po) by ioan-eugen STAN (closes: #595727).
  * Esperanto (eo.po) by Felipe Castro (closes: #596171).

  [ Colin Watson ]
  * Make grub-efi-amd64 conflict with grub-pc as well as the other way
    round.

  [ Robert Millan ]
  * enable_zfs.patch: Fix grub-fstest build problem.

 -- Robert Millan <rmh@debian.org>  Fri, 10 Sep 2010 13:42:52 +0200

grub2 (1.98+20100804-4) unstable; urgency=low

  [ Updated translations ]
  * Italian (it.po) by Luca Monducci (closes: #593685).
  * Finnish (fi.po) by Esko Arajärvi (closes: #593921).

  [ Colin Watson ]
  * Run update-grub from kernel hooks if DEB_MAINT_PARAMS is unset, for
    compatibility with old kernel packages.  This may produce duplicate runs
    of update-grub, but that's better than not running it at all (closes:
    #594037).

 -- Colin Watson <cjwatson@debian.org>  Mon, 23 Aug 2010 12:11:55 +0100

grub2 (1.98+20100804-3) unstable; urgency=low

  [ Updated translations ]
  * Brazilian Portuguese (pt_BR.po) by Flamarion Jorge (closes: #592156).
  * Asturian (ast.po) by Maacub (closes: #592313).
  * Galician (gl.po) by Jorge Barreiro (closes: #592816).

  [ Robert Millan ]
  * Backport ZFS bugfixes from upstream Bazaar:
    - zfs_fix_chroot.patch: Fix breakage when running grub-probe inside chroot.
    - zfs_fix_label_arg.patch: Fix grub-probe fs_label argument.
    - zfs_fix_pathname.patch: Fix pathname for non-root ZFS filesystems.
    - zfs_fix_segfault.patch: Fix segfault when /dev is not mounted.

  [ Colin Watson ]
  * Escape single quotes when removing them from $mode in zz-update-grub, so
    that this works when /bin/sh is bash (thanks, Will Dyson; closes:
    #593242).
  * Add support for ext2 root on GNU/kFreeBSD (thanks, Aurelien Jarno;
    closes: #593467).

 -- Colin Watson <cjwatson@debian.org>  Thu, 19 Aug 2010 18:21:45 +0100

grub2 (1.98+20100804-2) unstable; urgency=low
