@@ -1,7 +1,7 @@
-Description: Fix grub-probe fs_label argument
+Description: Fix kfreebsd_device initialization on ZFS
 Author: Robert Millan <rmh@debian.org>
 Forwarded: not needed, patch from upstream Bazaar
-Last-Update: 2010-08-16
+Last-Update: 2010-09-10
 
 --- a/util/grub.d/10_kfreebsd.in	2010-08-01 21:21:09 +0000
 +++ b/util/grub.d/10_kfreebsd.in	2010-08-16 13:07:46 +0000
@@ -10,7 +10,7 @@ Last-Update: 2010-08-16
  
    case ${GRUB_FS} in
 -    zfs)		kfreebsd_device=$(grub-probe -t label --device ${GRUB_DEVICE}) ;;
-+    zfs)		kfreebsd_device=$(grub-probe -t fs_label --device ${GRUB_DEVICE}) ;;
++    zfs)		kfreebsd_device=$(grub-probe -t fs_label --device ${GRUB_DEVICE})$(grub-mkrelpath / | sed -e "s,/*@$,,") ;;
      *)			kfreebsd_device=${GRUB_DEVICE} ;;
    esac
  
