@@ -11,8 +11,10 @@ grub2 (1.98+20100804-5) UNRELEASED; urgency=low
 
   [ Robert Millan ]
   * enable_zfs.patch: Fix grub-fstest build problem.
+  * zfs_fix_label_arg.patch: Fix kfreebsd_device initialization on ZFS
+    for non-main filesystems.
 
- -- Robert Millan <rmh@debian.org>  Fri, 10 Sep 2010 13:42:52 +0200
+ -- Robert Millan <rmh@debian.org>  Fri, 10 Sep 2010 13:48:27 +0200
 
 grub2 (1.98+20100804-4) unstable; urgency=low
 
